--- a/20180313.ipynb
+++ b/20180313.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "i =4"
+    "i = 4"
    ]
   },
   {
@@ -83,32 +83,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "hungry = True\n",
     "sleep = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "not hungry"
    ]
   },
   {
@@ -128,7 +108,7 @@
     }
    ],
    "source": [
-    "hungry and sleep"
+    "not hungry"
    ]
   },
   {
@@ -139,10 +119,30 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
      "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hungry and sleep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,31 +173,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = \"This is a string\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(s)"
+    "s =  \"This is a string\""
    ]
   },
   {
@@ -208,7 +188,7 @@
     {
      "data": {
       "text/plain": [
-       "3"
+       "str"
       ]
      },
      "execution_count": 9,
@@ -217,7 +197,7 @@
     }
    ],
    "source": [
-    "1 + 2"
+    "type(s)"
    ]
   },
   {
@@ -228,7 +208,7 @@
     {
      "data": {
       "text/plain": [
-       "-1"
+       "3"
       ]
      },
      "execution_count": 10,
@@ -237,7 +217,7 @@
     }
    ],
    "source": [
-    "1 - 2"
+    "1 + 2"
    ]
   },
   {
@@ -248,7 +228,7 @@
     {
      "data": {
       "text/plain": [
-       "20"
+       "-1"
       ]
      },
      "execution_count": 11,
@@ -257,7 +237,7 @@
     }
    ],
    "source": [
-    "4 * 5"
+    "1 - 2"
    ]
   },
   {
@@ -268,7 +248,7 @@
     {
      "data": {
       "text/plain": [
-       "1.4"
+       "20"
       ]
      },
      "execution_count": 12,
@@ -277,7 +257,7 @@
     }
    ],
    "source": [
-    "7 / 5"
+    "4 * 5"
    ]
   },
   {
@@ -288,7 +268,7 @@
     {
      "data": {
       "text/plain": [
-       "9"
+       "1.4"
       ]
      },
      "execution_count": 13,
@@ -297,19 +277,39 @@
     }
    ],
    "source": [
-    "3 ** 2"
+    "7 / 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " 3 ** 2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# List"
+    "## List"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "list"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "6"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "5"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
        "[1, 2]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
        "[2, 3, 4, 5, 6]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "[1, 2, 3]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
        "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,21 +497,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Advanced python types"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "I = (3,1,2)"
+    "## Advanced python types"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "I =(3,1,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
        "tuple"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,31 +548,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = {'foo':1,'bar':2.3,'s':'my dictionary'}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(d)"
+    "d={'foo':1,'bar':2.3,'s':'my dictionary'}"
    ]
   },
   {
@@ -583,10 +563,30 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "dict"
       ]
      },
      "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
